Implemented scroll with personages and scroll infinite

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="com.example.paulofelipeoliveirasouza.marvelproject">
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".mvp.mainActivity.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
