--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.2.0'
 
     implementation 'com.android.support:gridlayout-v7:28.+'
+
+    implementation 'de.hdodenhof:circleimageview:+'
 }
